tests/ui/associated-type-bounds/nested-associated-type-bound-incompleteness.stderr
error[E0308]: mismatched types
  --> $DIR/nested-associated-type-bound-incompleteness.rs:24:21
   |
LL |     drop::<Vec<u8>>(vec_u);
   |     --------------- ^^^^^ expected `Vec<u8>`, found `Vec<u32>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Vec<u8>`
              found struct `Vec<u32>`
note: function defined here
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
